WIP: style: fix zoom on mobile devices and improve the main layout

--- a/src/index.css
+++ b/src/index.css
@@ -16,22 +16,6 @@
    app
    ---------- */
 
-.el-flex-main-parent {
-    height: 100%;
-    min-height: 100%;
-    display: flex;
-    flex-direction: column;
-}
-
-.el-flex-main-parent > div {
-    flex: 1;
-    display: flex;
-}
-
-.el-flex-main-parent > .menu {
-    flex: 0;
-}
-
 .el-movie-form-sidebar.sidebar {
     width: 90% !important;
     border: none;
